data/derived/comb/progs/unify/prog2928.ml.out
Characters 21-32:
  let c3 () = failwith (15, 4, 17);;
                       ^^^^^^^^^^^
Error: This expression has type 'a * 'b * 'c
       but an expression was expected of type string
